feat: validating URL ahead of HTTP request